2007-01-31  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/*.c :
	Remove Multi Complex definition.
	* src/type/doubleComplex.h :
	Used as C99 Complex interface or hand-made complex.
	* src/type/floatComplex.h :
	Used as C99 Complex interface or hand-made complex.
	* src/*/Makefile :
	Add -std=c99 flag for native c99 complex compilation.
	* src/elementaryFunctions/exp :
	Exponential functions.
	* src/test/testExp.c :
	Add some Exponential functions tests.

2007-01-29  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/tan :
	Tangeant functions.
	* src/elementaryFunctions/tanh :
	Hyperbolic Tangeant functions.
	* src/test/testCosh.c :
	Add some Hyperbolic Cosine tests.
	* src/test/tesSinh.c :
	Add some Hyperbolic Sine tests.
	* src/test/testTan.c :
	Add some Tangeant tests.
	* src/test/tesTanh.c :
	Add some Hyperbolic Tangeant tests.


2007-01-19  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/cosh :
	Hyperbolic Cosine functions
	* src/elementaryFunctions/sinh :
	Hyperbolic Sine functions

2007-01-05  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/acos :
	ArcCosine functions
	* src/elementaryFunctions/asin :
	ArcSine functions

2006-12-11  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/test/testCos.c :
	Add some cosine tests.
	* src/test/tesSin.c :
	Add some sine tests.
	* README :
	Add some standards and style definitions.

2006-12-08  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/test :
	Test files for libraries.
	* src/elementaryFunctions/cos :
	Cosine functions
	* src/elementaryFunctions/sin :
	Sine functions


2006-12-04  Bruno JOFRET  <bruno.jofret@inria.fr>

	* Group functions:
	Group all same name functions, ignore type.
	* Inverse Cosinus [acos]:
	Done for Real and Complex type.
	* Inverse Hyperbolic Cosinus [acosh]:
	Done for Real and Complex type.
	* Inverse Sinus [asin]:
	Done for Real and Complex type.
	* Inverse Hyperbolic Sinus [asinh]:
	Done for Real and Complex type.